--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,7 @@ ul{
     z-index: 0;
     overflow-y: auto;
     overflow-x: hidden;
+    transition: all 0.3s ease;
 }
 .section.back-section
 {
@@ -194,6 +195,7 @@ ul{
     justify-content: center;
     align-items: center;
     z-index:10;
+    transition: all 0.3s ease;
 }
 
 .aside .logo{
@@ -254,6 +256,7 @@ ul{
     display: none;
     align-items: center;
     justify-content: center;
+    transition: all 0.3s ease;
 }
 
 .aside .nav-toggler span
@@ -264,6 +267,12 @@ ul{
     display: inline-block;
     position: relative;
 }
+
+.aside .nav-toggler.open span
+{
+    background-color: transparent;
+}
+
 
 .aside .nav-toggler span::before
 {
@@ -276,6 +285,13 @@ ul{
     left: 0;
 }
 
+.aside .nav-toggler.open span::before
+{
+    transform: rotate(45deg);
+    top:0;
+
+}
+
 .aside .nav-toggler span::after
 {
     content: "";
@@ -286,7 +302,12 @@ ul{
     top: 6px;
     left: 0;
 }
-
+.aside .nav-toggler.open span::after
+{
+    transform: rotate(-45deg);
+    top:0;
+    
+} 
 
 
 
@@ -487,7 +508,6 @@ h3.my-profession
 }
 
 .about .about-content .personal-info .buttons .btn{
-    margin-right: 15px;
     margin-top: 10px;
 }
 
@@ -871,16 +891,43 @@ h3.my-profession
     height: 50px;
     padding: 0 50px;
 }
+
+
+
 @media (max-width:1199px)
 {
+    .section .container
+    {
+        padding-top: 70px ;
+    }
     .aside
     {
         left: -270px;
     }
-    .main-content
+    .aside.open
     {
-        padding-left: 0;
+        left: 0;
     }
+
+
+    .aside .nav-toggler
+    {
+         display: flex;
+         left:30px;
+    }
+    .aside .nav-toggler.open 
+    {
+        left:300px;
+    }
+
+    .section{
+        left: 0;
+    }
+
+    .section.open
+{
+    left: 270px;
+}
     .about .about-content .personal-info .info-item p span
     {
         display: block;
